--- a/forcebook/Base.lproj/Main.storyboard
+++ b/forcebook/Base.lproj/Main.storyboard
@@ -35,17 +35,17 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="FNq-wQ-gEa" userLabel="firstName">
-                                <rect key="frame" x="71" y="306" width="74" height="30"/>
+                                <rect key="frame" x="71" y="306" width="114" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Minch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKb-cd-XJd">
-                                        <rect key="frame" x="0.0" y="0.0" width="38.666666666666664" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="78.666666666666671" height="30"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o6D-oi-gaR">
-                                        <rect key="frame" x="48.666666666666671" y="0.0" width="25.000000000000014" height="30"/>
+                                        <rect key="frame" x="88.666666666666671" y="0.0" width="25" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -53,17 +53,17 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2uT-ae-zzr" userLabel="lastName">
-                                <rect key="frame" x="71" y="341" width="67" height="30"/>
+                                <rect key="frame" x="71" y="341" width="114" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Yoda" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6B-I3-3ge">
-                                        <rect key="frame" x="0.0" y="0.0" width="31.666666666666668" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="78.666666666666671" height="30"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rqw-lF-3hG">
-                                        <rect key="frame" x="41.666666666666671" y="0.0" width="25.000000000000014" height="30"/>
+                                        <rect key="frame" x="88.666666666666671" y="0.0" width="25" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -93,7 +93,9 @@
                         <constraints>
                             <constraint firstItem="7MH-hZ-QTA" firstAttribute="width" secondItem="7MH-hZ-QTA" secondAttribute="height" multiplier="1:1" id="3z5-mD-BjD"/>
                             <constraint firstItem="7MH-hZ-QTA" firstAttribute="leading" secondItem="eZ1-Zz-raH" secondAttribute="trailing" constant="-48" id="H1o-fA-UyS"/>
+                            <constraint firstItem="KKb-cd-XJd" firstAttribute="width" secondItem="Tyh-Hg-xdh" secondAttribute="width" id="W96-Oq-aAv"/>
                             <constraint firstItem="7MH-hZ-QTA" firstAttribute="top" secondItem="eZ1-Zz-raH" secondAttribute="bottom" constant="-47" id="c88-54-FMk"/>
+                            <constraint firstItem="Q6B-I3-3ge" firstAttribute="width" secondItem="Tyh-Hg-xdh" secondAttribute="width" id="fT7-HI-0cW"/>
                         </constraints>
                     </view>
                 </viewController>
